Bug 1406380 Fix -Wreorder warnings r=njn

MozReview-Commit-ID: 7Zh2pvAMpXR